# carousels

./: .eslintignore  .gitignore  README.md  babel-types.json  battleships.html  costs.js  example.sh  index.html  index.js  index_other_demo_code.html  main.js  package-lock.json  package.json  server.js  test.js
achilles-ast/: Cargo.toml  LICENSE  README.md  package-lock.json  package.json
achilles-ast/js/: index.js
achilles-ast/no_wasm/: Cargo.toml
achilles-ast/no_wasm/src/: ir.txt  main.rs  test_hello.rs  test_program.rs
achilles-ast/src/: lib.rs
achilles-ast/static/: index.html
ast-visitor-rust/: Cargo.toml
ast-visitor-rust/src/: main.rs
demo/: battleships.html  index.html  plot.js  rust.html  style.css
docs/: ir.md  math.js  merge_sort_dedup_ir.json
lib/: analysis.js  anotator.js  babel-types-list.js  carousels.js  costs.js  imparse.js  index.min.js  jquery-ui.css  jsdelivr-header.js  metric.js  plot.js  polynomium.js  setup.js  test.html
rust/: .gitignore  Cargo.toml  Makefile  build.js  build.sh  out.json
rust/ir_node_derive/src/: lib.rs
rust/js/: metrics.js  plot.js  wrapper.js
rust/no_wasm/: Cargo.toml
rust/no_wasm/src/: ir.txt
rust/src/: ir.rs  lib.rs  main.rs  visitor.rs
rust/src/old/: oldmain.rs  test_hello.rs  test_program.rs
rust/src/output/: out.json
rust/src/test/: test_hello.rs
rust/src/visitor/: expression.rs  file.rs  functionDefinition.rs  function_definition.rs  mod.rs  nameExpression.rs  name_expression.rs  program.rs  stack.rs  stack_visitor.rs  typeNode.rs  type_node.rs  variableDefinition.rs  variable_definition.rs
rust/static/: bundle.js  index.html
rust/tests/: test_program.rs  test_program2.rs  test_simple.rs
src/: analysis.js  carousels.js  costs.js  index.js  main.js  metric.js  plot.js  server.js  setup.js
src/_costs/: index.js  rustBGW.js  rustSPDZ.js  rustTest.js
src/_old/: metric.js  plot.js  setup.js
src/analyze/: analyze.js  analyzer.js  loop.js  loops.js  math.js  output.js  ranges.js  visitor.js
src/analyze/analysis/: array.js  callAndReturn.js  carouselsAnnotation.js  expression.js  for.js  forEach.js  functionDefinition.js  functionDetector.js  if.js  oblivIf.js  sequence.js  value.js  variable.js
src/cmd/: example.sh  format.js  main.js
src/costs/: index.js  jiff.json  rustBGV.js  rustBGW.js  rustBGW.json  rustGC.js  rustSPDZ.js
src/ir/: ir.js  javascript.js  metric.js  parsers.js  visitor.js
src/output/: output.js
src/parsers/: index.js  rust.js
src/typing/: index.js  javascript.js  rust.js
src/utils/: enum.js
test/: test.html  testIR.js  tests.js
ui/: carouselsWrapper.js  codeMirrorHandlers.js  events.js  index.css  index.html  index.js  plot.js  ui.js
ui/codesamples/: samples.js
ui/handlers/: display.js
ui/load/: codemirror.js  populate.js
ui/plotting/: plot.js
ui/static/: events.js  inputControllers.js  parse.js  plot.js
ui/style/: controls.css  misc.css  output.css
(+94 files in other folders)
