[package]
name = "ast_visitor"
version = "0.1.0"
authors = ["petitpenguin <ra1issa@bu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

syn = {version = "0.15.42", features = ["full", "extra-traits", "visit"] }
serde = {serde = "1.0.100", features = ["derive"]}
serde_json = {version ="1.0"}
quote = "0.6.13"
