
[package]
name = "achilles-IR-generator"
description = "Rust Parser and IR generator for obliv-rust compatibility with Carousels"
version = "0.1.0"
edition = "2018"

[dependencies]
syn = {version = "1.0.15", features = ["full", "extra-traits", "visit", "parsing" ] }
serde = {serde = "1.0.100", features = ["derive"]}
serde_json = {version ="1.0"}
quote = "1.0.2"
